--- a/scss/styles/_win98.scss
+++ b/scss/styles/_win98.scss
@@ -309,11 +309,9 @@
                 width: 95%;
                 background: transparent;
         }
-
         input[type="range"]:focus {
                 outline: none;
         }
-
         input[type="range"]::-webkit-slider-thumb {
                 -webkit-appearance: none;
                 height: 21px;
@@ -322,13 +320,11 @@
                 background-image: url("../icons/win98/indicator-horizontal.svg");
                 transform: translateY(-8px);
         }
-
         input[type="range"].has-box-indicator::-webkit-slider-thumb {
                 background-image: url("/dynamic-ui-framework/icons/win98/indicator-rectangle-horizontal.svg");
                 background-image: url("../icons/win98/indicator-rectangle-horizontal.svg");
                 transform: translateY(-10px);
         }
-
         input[type="range"]::-moz-range-thumb {
                 height: 21px;
                 width: 11px;
@@ -338,13 +334,11 @@
                 background-image: url("../icons/win98/indicator-horizonta.svg");
                 transform: translateY(2px);
         }
-
         input[type="range"].has-box-indicator::-moz-range-thumb {
                 background-image: url("/dynamic-ui-framework/icons/win98/indicator-rectangle-horizontal.svg");
                 background-image: url("../icons/win98/indicator-rectangle-horizontal.svg");
                 transform: translateY(0px);
         }
-
         input[type="range"]::-webkit-slider-runnable-track {
                 width: 100%;
                 height: 2px;
@@ -373,7 +367,7 @@
                 color: black;
         }
 
-        /* Input & Textarea field */
+        /* Input & Textarea field + dropdown */
         input[type="email"],
         input[type="password"],
         input[type="text"],
@@ -383,5 +377,56 @@
                 background-color: #fff !important;
                 box-shadow: $border_field;
                 padding: 3px 4px;
+        }
+
+        /* Dropdown */
+        .dropdown {
+                border-radius: 0 !important;
+                background-color: #fff;
+                box-shadow: $border_field;
+
+                .dropdown-menu {
+                        border-radius: 0;
+                        background-color: $button_highlight;
+                        .dropdown-item {
+                                border-radius: 0;
+                                &:hover {
+                                        background-color: $dialog_blue_light;
+                                        color: $button_highlight;
+                                }
+                        }
+                }
+        }
+        .dropdown .dropdown-label:focus,
+        .dropdown.show .dropdown-label {
+                background-color: $dialog_blue;
+        }
+        .dropdown .dropdown-label:focus p,
+        .dropdown.show .dropdown-label p {
+                color: $button_highlight;
+        }
+        .dropdown .dropdown-label {
+                border-radius: 0;
+                background: none;
+                padding: 0 10px;
+        }
+        .dropdown .dropdown-toggle {
+                appearance: none;
+                background-image: url("/dynamic-ui-framework/icons/win98/button-down.svg");
+                background-image: url("../icons/win98/button-down.svg");
+                // TOFIX: not font-responsive
+                background-position: top 1px right 1px;
+                background-repeat: no-repeat;
+                background-size: 23px;
+                border-radius: 0;
+                background-color: transparent;
+        }
+        .dropdown.show .dropdown-toggle {
+                background-image: url("/dynamic-ui-framework/icons/win98/button-down-active.svg");
+                background-image: url("../icons/win98/button-down-active.svg");
+                background-color: $dialog_blue;
+        }
+        .dropdown .dropdown-arrow {
+                display: none;
         }
 }
