--- a/scss/styles/_win98.scss
+++ b/scss/styles/_win98.scss
@@ -92,11 +92,12 @@
         // CONTAINER COMPONENTS
         .display-content > .container,
         .setting-panel {
-                background-color: $schemeColor;
                 border-radius: 0 !important;
-                background: silver;
                 box-shadow: inset -1px -1px #0a0a0a, inset 1px 1px #dfdfdf,
                         inset -2px -2px grey, inset 2px 2px #fff;
+        }
+        .setting-panel {
+                background-color: $schemeColor;
         }
         // TODO: media responsive
         .title-bar {
