Fix updating inner background (for real)

--- a/backgrounds/_none-bg.scss
+++ b/backgrounds/_none-bg.scss
@@ -1,4 +1,4 @@
 .none-bg {
-        background-color: $schemeColor;
+        background-color: $schemeColor !important;
         background-image: none;
 }
