--- a/css/dynamic-style.css
+++ b/css/dynamic-style.css
@@ -2637,6 +2637,7 @@ table,
 }
 
 .glass-style .display-content > .container {
+  background-color: rgba(212, 212, 212, 0.6) !important;
   backdrop-filter: blur(10px);
   -webkit-backdrop-filter: blur(10px);
   border: 1px solid rgba(209, 213, 219, 0.6);
