--- a/scss/init/_glass.scss
+++ b/scss/init/_glass.scss
@@ -1,6 +1,6 @@
-$transparency:0.6;
-$blur:10;
-$borderSize:1;
+$transparency: 0.6;
+$blur: 10;
+$borderSize: 1;
 
 $schemeColorA: rgba(212, 212, 212, $transparency);
 $lightenSchemeColorA: rgba(250, 250, 250, $transparency);
@@ -14,18 +14,18 @@ $colorfull3A: rgba(196, 6, 57, $transparency);
 
 @mixin blur-and-border {
         backdrop-filter: blur(#{$blur}px);
-        -webkit-backdrop-filter:blur(#{$blur}px);
-        border: #{$borderSize}px solid rgba(209, 213, 219, 0.6),
+        -webkit-backdrop-filter: blur(#{$blur}px);
+        border: #{$borderSize}px solid rgba(209, 213, 219, 0.6);
 }
 
 .glass-style {
-
-        .display-content>.container::before {
+        .display-content > .container::before {
                 opacity: $transparency;
                 // @include blur-and-border();
         }
 
-        .display-content>.container {
+        .display-content > .container {
+                background-color: $schemeColorA !important;
                 @include blur-and-border();
         }
 
@@ -33,7 +33,7 @@ $colorfull3A: rgba(196, 6, 57, $transparency);
         .radio-button-group .button.active,
         .radio-button-group .button:not(.active):hover,
         .radio-selection,
-        table>tbody>tr:hover {
+        table > tbody > tr:hover {
                 background-color: $highlightColorA;
                 color: $contrastHighlightColor;
                 @include blur-and-border();
@@ -52,7 +52,7 @@ $colorfull3A: rgba(196, 6, 57, $transparency);
                 @include blur-and-border();
         }
 
-        .display-content>.container.none-bg,
+        .display-content > .container.none-bg,
         .range-slider__range,
         .range-slider__value,
         .modal-content {
@@ -85,27 +85,27 @@ $colorfull3A: rgba(196, 6, 57, $transparency);
         }
 
         // RADIO
-        .segmented-control>input:not(:checked):not(:hover)+label {
+        .segmented-control > input:not(:checked):not(:hover) + label {
                 color: $mutedBaseColor;
         }
 
-        .segmented-control>input:hover+label {
+        .segmented-control > input:hover + label {
                 color: $highlightColor;
         }
 
-        .segmented-control>input:checked+label {
+        .segmented-control > input:checked + label {
                 color: $contrastHighlightColor;
         }
 
         // CHECKBOX
-        .checkbox input:not(:checked):not(:hover)~label i,
-        .checkbox input:not(:checked)~label+.name {
+        .checkbox input:not(:checked):not(:hover) ~ label i,
+        .checkbox input:not(:checked) ~ label + .name {
                 color: $mutedBaseColor;
         }
 
-        .checkbox input:checked~label+.name,
-        .checkbox input:checked~label i,
-        .checkbox input:hover~label i {
+        .checkbox input:checked ~ label + .name,
+        .checkbox input:checked ~ label i,
+        .checkbox input:hover ~ label i {
                 color: $highlightColor;
         }
 
@@ -125,7 +125,7 @@ $colorfull3A: rgba(196, 6, 57, $transparency);
                 @include blur-and-border();
         }
 
-        // RANGE SLIDER 
+        // RANGE SLIDER
         ::-webkit-slider-thumb {
                 background-color: $highlightColorA;
                 @include blur-and-border();
