--- a/scss/styles/_win98.scss
+++ b/scss/styles/_win98.scss
@@ -408,7 +408,7 @@
         }
         .dropdown .dropdown-label {
                 border-radius: 0;
-                background: none;
+                background-color: transparent;
                 padding: 0 10px;
         }
         .dropdown .dropdown-toggle {
