--- a/css/dynamic-style.css
+++ b/css/dynamic-style.css
@@ -5,6 +5,46 @@ Init values for dynamic properties to reduce  page load time
 /*-------------------------
          SETTING
 -------------------------*/
+.setting-button-border {
+  border-left: none !important;
+  top: 75px;
+  z-index: 1000;
+  position: fixed;
+  -webkit-transition: all 0.3s ease;
+  transition: all 0.3s ease;
+  -webkit-transition: left 0.7s ease;
+  transition: left 0.7s ease;
+  display: block;
+  height: 40px;
+  left: 0;
+  width: 40px;
+  border-top-left-radius: 0 !important;
+  border-bottom-left-radius: 0 !important;
+}
+
+.setting-button-border .setting-button {
+  border-top-left-radius: 0 !important;
+  border-bottom-left-radius: 0 !important;
+  position: fixed;
+  height: 98%;
+}
+
+.setting-button-border .cp-toggle {
+  position: fixed;
+}
+
+.setting-button-border a {
+  width: 40px;
+  height: 40px;
+  display: block;
+  text-align: center;
+}
+
+.setting-button-border i {
+  font-size: 1.25rem;
+  line-height: 40px;
+}
+
 .setting-section .setting-panel {
   top: 75px;
   z-index: 1000;
@@ -84,29 +124,8 @@ Init values for dynamic properties to reduce  page load time
   width: 6rem;
 }
 
-.setting-section .setting-panel .background-item {
-  height: 250px;
-  zoom: 0.15;
-  border-radius: 60px;
-  border: #4d4d4d 2px solid;
-  cursor: pointer;
-}
-
-.setting-section .setting-panel .background-item::before {
-  opacity: 1;
-  border-radius: 60px;
-  z-index: -1;
-  content: "";
-  background-size: cover;
-  position: absolute;
-  top: 0px;
-  right: 0px;
-  bottom: 0px;
-  left: 0px;
-}
-
-.setting-section .setting-panel .background-item.hide {
-  display: none;
+.setting-section .setting-panel #background-panel .dropdown .dropdown-label {
+  pointer-events: none;
 }
 
 .setting-panel.hide {
@@ -123,46 +142,6 @@ Init values for dynamic properties to reduce  page load time
 .setting-panel.show {
   opacity: 1;
   visibility: visible;
-}
-
-.setting-section .setting-button-border {
-  border-left: none !important;
-  top: 75px;
-  z-index: 1000;
-  position: fixed;
-  -webkit-transition: all 0.3s ease;
-  transition: all 0.3s ease;
-  -webkit-transition: left 0.7s ease;
-  transition: left 0.7s ease;
-  display: block;
-  height: 40px;
-  left: 0;
-  width: 40px;
-  border-top-left-radius: 0 !important;
-  border-bottom-left-radius: 0 !important;
-}
-
-.setting-section .setting-button-border .setting-button {
-  border-top-left-radius: 0 !important;
-  border-bottom-left-radius: 0 !important;
-  position: fixed;
-  height: 98%;
-}
-
-.setting-section .setting-button-border .cp-toggle {
-  position: fixed;
-}
-
-.setting-section .setting-button-border a {
-  width: 40px;
-  height: 40px;
-  display: block;
-  text-align: center;
-}
-
-.setting-section .setting-button-border i {
-  font-size: 1.25rem;
-  line-height: 40px;
 }
 
 .setting-section .scrollable {
@@ -186,57 +165,9 @@ Init values for dynamic properties to reduce  page load time
   border-radius: 0 !important;
 }
 
-.setting-section ul.pattern {
-  list-style: none outside none;
-  margin: 0 0 0;
-  overflow: hidden;
-  padding: 0;
-}
-
-.setting-section ul.pattern li {
-  float: left;
-}
-
-/*-------------------------
-       COLOR SCHEME
--------------------------*/
-.color-scheme li {
-  width: 40%;
-  margin: 0 !important;
-}
-
-.color-scheme li a {
-  display: block;
-  padding: 8px 0;
-  -webkit-transition: all 0.5s ease;
-  transition: all 0.5s ease;
-  font-size: 1.25rem;
-}
-
-.color-scheme li a.light-scheme:hover,
-.color-scheme li a.light-scheme.active {
-  background-color: #0fcae8;
-  color: #fff;
-}
-
-.color-scheme li a.dark-scheme-option:hover,
-.color-scheme li a.dark-scheme-option.active {
-  background-color: #2c2d30;
-  color: #fff;
-}
-
 .theme-skin {
   margin: 0;
   padding: 8px 0 0 0;
-}
-
-.theme-skin div a {
-  font-size: 1.15rem !important;
-}
-
-.theme-skin div {
-  padding: 1px;
-  margin-bottom: 12px;
 }
 
 #color-panel label {
@@ -2136,7 +2067,7 @@ body,
 
 body,
 .logo,
-.setting-section .setting-button-border i,
+.setting-button-border i,
 .follow-label,
 .social a i,
 .blog-content h6 a,
@@ -2262,7 +2193,7 @@ body,
 .image-border img,
 .image-border,
 .setting-section .setting-panel,
-.setting-section .setting-button-border,
+.setting-button-border,
 .setting-button,
 .duties .image-border .box-hover-border,
 .box-border,
