--- a/scss/_setting.scss
+++ b/scss/_setting.scss
@@ -2,6 +2,46 @@
          SETTING
 -------------------------*/
 
+// SETTING BUTTON
+.setting-button-border {
+        border-left: none !important;
+        top: 75px;
+        z-index: 1000;
+        position: fixed;
+        transition: all 0.3s ease;
+        transition: left 0.7s ease;
+        display: block;
+        height: 40px;
+        left: 0;
+        width: 40px;
+        border-top-left-radius: 0 !important;
+        border-bottom-left-radius: 0 !important;
+
+        .setting-button {
+                border-top-left-radius: 0 !important;
+                border-bottom-left-radius: 0 !important;
+                position: fixed;
+                height: 98%;
+        }
+
+        .cp-toggle {
+                position: fixed;
+        }
+
+        a {
+                width: 40px;
+                height: 40px;
+                display: block;
+                text-align: center;
+        }
+
+        i {
+                // position: absolute !important;
+                font-size: 1.25rem;
+                line-height: 40px;
+        }
+}
+
 //SETTING MAIN PANEL
 $panelWidth: 180px;
 
@@ -89,29 +129,8 @@ $panelWidth: 180px;
         }
 
         // BACKGROUND OPTION
-        .background-item {
-                height: 250px;
-                zoom: 0.15;
-                border-radius: 60px;
-                border: $mutedBaseColor 2px solid;
-                cursor: pointer;
-        }
-
-        .background-item::before {
-                opacity: 1;
-                border-radius: 60px;
-                z-index: -1;
-                content: "";
-                background-size: cover;
-                position: absolute;
-                top: 0px;
-                right: 0px;
-                bottom: 0px;
-                left: 0px;
-        }
-
-        .background-item.hide {
-                display: none;
+        #background-panel .dropdown .dropdown-label {
+                pointer-events: none;
         }
 }
 
@@ -132,46 +151,6 @@ $panelWidth: 180px;
         // left: 0;
         opacity: 1;
         visibility: visible;
-}
-
-// SETTING BUTTON
-.setting-section .setting-button-border {
-        border-left: none !important;
-        top: 75px;
-        z-index: 1000;
-        position: fixed;
-        transition: all 0.3s ease;
-        transition: left 0.7s ease;
-        display: block;
-        height: 40px;
-        left: 0;
-        width: 40px;
-        border-top-left-radius: 0 !important;
-        border-bottom-left-radius: 0 !important;
-
-        .setting-button {
-                border-top-left-radius: 0 !important;
-                border-bottom-left-radius: 0 !important;
-                position: fixed;
-                height: 98%;
-        }
-
-        .cp-toggle {
-                position: fixed;
-        }
-
-        a {
-                width: 40px;
-                height: 40px;
-                display: block;
-                text-align: center;
-        }
-
-        i {
-                // position: absolute !important;
-                font-size: 1.25rem;
-                line-height: 40px;
-        }
 }
 
 .setting-section .scrollable {
@@ -203,69 +182,10 @@ $scrollbarRadius: 16px;
         border-radius: 0 !important;
 }
 
-.setting-section ul.pattern {
-        list-style: none outside none;
-        margin: 0 0 0;
-        overflow: hidden;
-        padding: 0;
-}
-
-.setting-section ul.pattern li {
-        float: left;
-}
-
-/*-------------------------
-       COLOR SCHEME
--------------------------*/
-.color-scheme li {
-        width: 40%;
-        margin: 0 !important;
-}
-
-.color-scheme li a {
-        display: block;
-        padding: 8px 0;
-        transition: all 0.5s ease;
-        font-size: 1.25rem * $fontScale;
-}
-
-.color-scheme li a.light-scheme:hover,
-.color-scheme li a.light-scheme.active {
-        background-color: #0fcae8;
-        color: #fff;
-}
-
-.color-scheme li a.dark-scheme-option:hover,
-.color-scheme li a.dark-scheme-option.active {
-        background-color: #2c2d30;
-        color: #fff;
-}
-
 .theme-skin {
         margin: 0;
         padding: 8px 0 0 0;
 }
-
-.theme-skin div a {
-        font-size: 1.15rem * $fontScale !important;
-}
-
-.theme-skin div {
-        padding: 1px;
-        margin-bottom: 12px;
-}
-
-//TODO:  COLOR PICKERS
-// ::-webkit-color-swatch-wrapper {
-//         padding: 0;
-//         // background-color: transparent;
-//         background-color: #0fcae8;
-//         border: 0;
-// }
-
-// ::-webkit-color-swatch {
-//         border: none;
-// }
 
 #color-panel label {
         font-size: 1.1rem * $fontScale !important;
