--- a/scss/init/_common.scss
+++ b/scss/init/_common.scss
@@ -9,21 +9,21 @@ body,
 .blog .blog-image,
 .blog .blog-item .before,
 .toggle .indicator {
-  background-color: $schemeColor;
+        background-color: $schemeColor;
 }
 
 .bg-highlight-color,
 .border-style {
-  background-color: $highlightColor;
+        background-color: $highlightColor;
 }
 
 // PAGE PILLING
 #pp-nav li :not(.active) span {
-  background-color: $baseColor;
+        background-color: $baseColor;
 }
 
 #pp-nav li .active span {
-  background-color: $highlightColor;
+        background-color: $highlightColor;
 }
 
 .highlight-color,
@@ -33,12 +33,12 @@ body,
 .contact .form-item .form-control,
 .highlight-portfolio-item.fa-star,
 .portfolio .portfolio-icon a:hover {
-  color: $highlightColor;
+        color: $highlightColor;
 }
 
 body,
 .logo,
-.setting-section .setting-button-border i,
+.setting-button-border i,
 .follow-label,
 .social a i,
 .blog-content h6 a,
@@ -49,7 +49,7 @@ body,
 .portfolio-single .close,
 .pp-tooltip,
 .blog-label a {
-  color: $baseColor;
+        color: $baseColor;
 }
 
 .blog-content .list-inline-item span,
@@ -63,49 +63,49 @@ body,
 .form-control:-ms-input-placeholder,
 .form-control::-ms-input-placeholder,
 .contact-info-text small {
-  color: $mutedBaseColor;
+        color: $mutedBaseColor;
 }
 
 .colorfull1,
 .background-colorfull1 > .badge {
-  color: $colorfull1;
+        color: $colorfull1;
 }
 
 .colorfull2,
 .background-colorfull2 > .badge {
-  color: $colorfull2;
+        color: $colorfull2;
 }
 
 .colorfull3,
 .background-colorfull3 > .badge {
-  color: $colorfull3;
+        color: $colorfull3;
 }
 
 .background-colorfull1 {
-  background-color: $colorfull1;
-  color: $contrastColorfull1;
+        background-color: $colorfull1;
+        color: $contrastColorfull1;
 }
 
 .background-colorfull2 {
-  background-color: $colorfull2;
-  color: $contrastColorfull2;
+        background-color: $colorfull2;
+        color: $contrastColorfull2;
 }
 
 .background-colorfull3 {
-  background-color: $colorfull3;
-  color: $contrastColorfull3;
+        background-color: $colorfull3;
+        color: $contrastColorfull3;
 }
 
 #education-timeline .timeline-items .timeline-border {
-  border-color: $colorfull1;
+        border-color: $colorfull1;
 }
 
 #experience-timeline .timeline-items .timeline-border {
-  border-color: $colorfull2;
+        border-color: $colorfull2;
 }
 
 #achievements-timeline .timeline-items .timeline-border {
-  border-color: $colorfull3;
+        border-color: $colorfull3;
 }
 
 .overlay-menu-toggler:hover,
@@ -113,17 +113,17 @@ body,
 .social i:hover,
 .list-inline.socials li a i:hover,
 #myMenu li a:hover {
-  color: $highlightColor;
+        color: $highlightColor;
 }
 
 // PRELOADER
 .loader {
-  // border-color: $baseColor;
-  border-top-color: $highlightColor;
+        // border-color: $baseColor;
+        border-top-color: $highlightColor;
 }
 
 #overlayer {
-  background-color: $schemeColor;
+        background-color: $schemeColor;
 }
 
 .blog .blog-image,
@@ -147,7 +147,7 @@ body,
 .image-border img,
 .image-border,
 .setting-section .setting-panel,
-.setting-section .setting-button-border,
+.setting-button-border,
 .setting-button,
 .duties .image-border .box-hover-border,
 .box-border,
@@ -180,7 +180,7 @@ table,
 .form-group textarea,
 .video-container,
 .alert {
-  border-radius: $borderRadius;
+        border-radius: $borderRadius;
 }
 
 //TODO: radius for border-background
@@ -188,26 +188,26 @@ table,
 }
 
 .checkbox i {
-  color: $mutedBaseColor;
+        color: $mutedBaseColor;
 }
 
 // CURSOR
 .flat-style,
 .neu-style,
 .glass-style {
-  * {
-    // cursor: default;
-  }
+        * {
+                // cursor: default;
+        }
 
-  .dui-radio .label,
-  .checkbox label,
-  i,
-  .overlay-menu-toggler,
-  input[type="color"] {
-    * {
-      cursor: pointer;
-    }
+        .dui-radio .label,
+        .checkbox label,
+        i,
+        .overlay-menu-toggler,
+        input[type="color"] {
+                * {
+                        cursor: pointer;
+                }
 
-    cursor: pointer;
-  }
+                cursor: pointer;
+        }
 }
